--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -597,7 +597,6 @@
                             <li><h6 class="dropdown-header">Anbefalinger & Prediksjoner</h6></li>
                             <li><a class="dropdown-item" href="{{ url_for('analysis.recommendation') }}"><i class="fas fa-star"></i> Anbefalinger</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('analysis.prediction') }}"><i class="fas fa-crystal-ball"></i> Prediksjoner</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('analysis.market_overview') }}"><i class="fas fa-chart-area"></i> Markedsoversikt</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('analysis.short_analysis') }}"><i class="fas fa-chart-bar"></i> Short analyse</a></li>
                         </ul>
                     </li>
@@ -638,6 +637,7 @@
                             <li><a class="dropdown-item" href="{{ url_for('features.analyst_recommendations') }}"><i class="fas fa-users"></i> Analytiker Anbefalinger</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><h6 class="dropdown-header">Avanserte Verktøy</h6></li>
+                            <li><a class="dropdown-item" href="{{ url_for('advanced_analytics.index') }}"><i class="fas fa-chart-line"></i> Advanced Analytics</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('advanced_features.currency_converter') }}"><i class="fas fa-exchange-alt"></i> Valutakonverter</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('investment_analyzer.index') }}"><i class="fas fa-calculator"></i> Investment Analyzer</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('mobile_trading.mobile_dashboard') }}"><i class="fas fa-mobile-alt"></i> Mobile Trading</a></li>
