--- a/app/templates/analysis/strategy_builder.html
+++ b/app/templates/analysis/strategy_builder.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 <div class="container mt-4">
+    <!-- Analysis Menu -->
+    {% include 'analysis/_menu.html' %}
+    
     <div class="row">
         <div class="col-md-12">
             <h1 class="mb-4">
