--- a/app/templates/analysis/technical.html
+++ b/app/templates/analysis/technical.html
@@ -7,6 +7,9 @@
 {% block content %}
 <link rel="stylesheet" href="/static/css/bg-dark-green.css">
 <div class="container-fluid mt-4">
+    <!-- Analysis Menu -->
+    {% include 'analysis/_menu.html' %}
+    
     <!-- Temporary navigation while fixing menu include -->
     <div class="mb-4">
         <nav aria-label="breadcrumb">
