--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -833,7 +833,7 @@ main {
 }
 
 .alert-warning {
-    background-color: #2e5869 !important;
+    background-color: #4a5761 !important;
     border-color: #ffecb5 !important;
     color: #fff !important;
 }
