--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -638,7 +638,6 @@
                             <i class="fas fa-tools"></i> Pro Tools
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{{ url_for('pro_tools.price_alerts') }}"><i class="fas fa-bell"></i> Prisalarmer</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('features.analyst_recommendations') }}"><i class="fas fa-users"></i> Analytiker Anbefalinger</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><h6 class="dropdown-header">Avanserte Verktøy</h6></li>
@@ -672,7 +671,8 @@
                             <li><a class="dropdown-item" href="{{ url_for('main.profile') }}"><i class="fas fa-user-cog"></i> Profil</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><h6 class="dropdown-header">Innstillinger</h6></li>
-                            <li><a class="dropdown-item" href="{{ url_for('notifications.settings') }}"><i class="fas fa-bell"></i> Varsler</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('notifications.settings') }}"><i class="fas fa-bell"></i> Varsler & Alarmer</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('pro_tools.price_alerts') }}"><i class="fas fa-bell-slash"></i> Prisalarmer</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('main.settings') }}"><i class="fas fa-cog"></i> Kontoinnstillinger</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('main.privacy') }}"><i class="fas fa-shield-alt"></i> Personvern</a></li>
                             <li><hr class="dropdown-divider"></li>
