--- a/app/templates/stocks/details.html
+++ b/app/templates/stocks/details.html
@@ -971,9 +971,9 @@ function createFallbackTechnicalContent() {
                 <h6>Trendindikatorer</h6>
                 <table class="table table-sm">
                     <tr><td>RSI (14)</td><td class="text-end"><span class="badge bg-warning">65.2</span></td></tr>
-                    <tr><td>SMA 20</td><td class="text-end">${({{ stock.price or 100 }} * 0.98).toFixed(2)} NOK</td></tr>
-                    <tr><td>SMA 50</td><td class="text-end">${({{ stock.price or 100 }} * 0.95).toFixed(2)} NOK</td></tr>
-                    <tr><td>EMA 12</td><td class="text-end">${({{ stock.price or 100 }} * 1.02).toFixed(2)} NOK</td></tr>
+                    <tr><td>SMA 20</td><td class="text-end">" + ({{ stock.price or 100 }} * 0.98).toFixed(2) + " NOK</td></tr>
+                    <tr><td>SMA 50</td><td class="text-end">" + ({{ stock.price or 100 }} * 0.95).toFixed(2) + " NOK</td></tr>
+                    <tr><td>EMA 12</td><td class="text-end">" + ({{ stock.price or 100 }} * 1.02).toFixed(2) + " NOK</td></tr>
                 </table>
             </div>
             <div class="col-md-6">
