--- a/app/templates/analysis/recommendations.html
+++ b/app/templates/analysis/recommendations.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 <div class="container py-4">
+    {% include 'analysis/_menu.html' %}
+    
     <div class="row">
         <div class="col-lg-12">
             <!-- Header -->
