--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{                    <form method="POST" action="{{ url_for('main.settings') }}"> block title %}Innstillinger{% endblock %}
+{% block title %}Innstillinger{% endblock %}
 
 {% block content %}
 <div class="container py-5">
