--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,8 +74,8 @@
     }
     
     .alert-warning {
-        background-color: #664d03 !important;
-        color: #fff3cd !important;
+        background-color: #0d47a1 !important;
+        color: #fff !important;
     }
     
     /* Danger card header styles moved to card-header-fixes.css */
