--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,8 @@
     
     <!-- Navigation fixes - comprehensive styling for all navigation elements -->
     <link href="{{ url_for('static', filename='css/navigation-fixes.css') }}?v=20250826" rel="stylesheet">
+    <!-- Analysis menu styling -->
+    <link href="{{ url_for('static', filename='css/analysis-menu.css') }}?v=20250827" rel="stylesheet">
     
     <!-- Simple navbar styling -->
     <style>
